data/derived/sp14/progs/unify/prog4840.ml.out
Characters 21-26:
  let _ = stringOfList [9;9];;
                       ^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> string
